# tauri-plugin-autostart

./: Cargo.toml
src/: lib.rs
