[package]
name = "tauri-plugin-autostart"
version = "0.0.0"
authors = [ "Tauri Programme within The Commons Conservancy" ]
description = ""
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { git = "https://github.com/luoffei/tauri.git", branch = "next"}
serde = "1.0"
thiserror = "1.0"

[dependencies.auto-launch]
git = "https://github.com/luoffei/auto-launch.git"
branch = "elevate_privileges"
